--- a/WeatherApp/WA-WeatherAPI/WA-WeatherAPI.csproj
+++ b/WeatherApp/WA-WeatherAPI/WA-WeatherAPI.csproj
@@ -22,4 +22,8 @@
 	  <ProjectReference Include="..\WA-Utility\WA-Utility.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="System.Text.Json" Version="7.0.1" />
+	</ItemGroup>
+
 </Project>
