--- a/WeatherApp/WA-WeatherAPI/WA-WeatherAPI.csproj
+++ b/WeatherApp/WA-WeatherAPI/WA-WeatherAPI.csproj
@@ -23,6 +23,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
 	  <PackageReference Include="System.Text.Json" Version="7.0.1" />
 	</ItemGroup>
 
